Add DateFilter in project detail page

--- a/FFive.React/ffive-react/package.json
+++ b/FFive.React/ffive-react/package.json
@@ -7,6 +7,7 @@
     "jwt-decode": "^2.2.0",
     "mdbreact": "^4.8.4",
     "moment": "^2.22.2",
+    "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-autosuggest": "^9.4.2",
     "react-dates": "^18.2.2",
