Redis with Retry

--- a/FFive.Services.Impl/FFive.Services.Impl.csproj
+++ b/FFive.Services.Impl/FFive.Services.Impl.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.2" />
+    <PackageReference Include="Polly" Version="6.1.2" />
+    <PackageReference Include="StackExchange.Redis" Version="2.0.519" />
   </ItemGroup>
 
   <ItemGroup>
