--- a/FFive.API/appsettings.json
+++ b/FFive.API/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DefaultConnection": "Server=localhost;Database=t0995;User=root;Password=mano;",
+  "DefaultConnection": "Server=localhost;Database=t0997;User=root;Password=root;",
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
