--- a/FFive.React/ffive-react/package.json
+++ b/FFive.React/ffive-react/package.json
@@ -21,7 +21,8 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "set PORT=5001 && react-scripts start",
+    "start": "react-scripts start",
+    "start-win": "set PORT=5001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
